--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 
 <html>
 		<head>
 				<title>A World About Charlie G</title>
 
-				<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+				<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 				<link rel="stylesheet" type="text/css" href="index.css">
 				<script type="text/javascript" src="index.js"></script>
-				<script src="app.js" type="text/javascript"></script>
+				<script type="text/javascript" src="app.js"></script>
 				<script type="text/javascript" src="config.js"></script>
 		</head>
 
 
-	<body ng-app="portfolioApp" ng-controller="project">
+	<body ng-app="portfolioApp" ng-controller="projectController">
 
 		<ng-view></ng-view>
 
